--- a/src/main/webapp/static/front/css/ta_article.css
+++ b/src/main/webapp/static/front/css/ta_article.css
@@ -31,9 +31,8 @@ section .inner p{font-size:16px}
 .inner .left .c .p1{font-size:14px; margin-top:5px; margin-left:10px; float:left; margin-bottom:5px}
 .inner .left .c .p2{font-size:14px; margin-top:5px; margin-left:10px; clear:both}
 .inner .left .c img{width:12px; height:12px;}
-.inner .left .c .add{width:12px; height:12px; position:relative; top:10px}
-.lb{display:none}
-.ad:hover .lb{display:block; margin-top:10px; width:100px}
+.add{width:12px; height:12px; position:relative; top:10px}
+.lb{display:block; margin-top:10px; width:100px}
 .inner .left .c .lb li{font-size:14px}
 .inner .left .c .lb li a{color:#000; width:100%; margin:3px 0px}
 .inner .left .b{margin-top:25px}
