--- a/src/main/webapp/static/front/css/m_message.css
+++ b/src/main/webapp/static/front/css/m_message.css
@@ -1,21 +1,4 @@
-/* CSS Document */
-*{padding:0; margin:0}
-header{background-color:#363f48; width:100%; height:87px; overflow:hidden}
-a{ text-decoration:none; display:inline-block;}
-ul{list-style:none}
-#logo{height:80px; width:8%;  float:left}
-#logo img{width:73px; margin-top:5px; margin-left:20px; height:75px}
-header ul{width:60%; float:left; height:38px; margin-top:25px}
-header .text{width:23%; float:left; }
-header ul li{display:inline-block; height:38px; }
-header ul li a{color:#82878d; width:100%; line-height:38px; font-size:20px; text-align:center; padding:0 18px}
-header ul li a:hover{background-color:#333333; color:#FFF}
-header .text{padding-top:20px; float:right}
-header .text input{height:33px; border:1px solid #009dda; width:250px; border-radius:4px}
-header .text img{position:relative; top:12px; left:-50px; width:32px; height:32px}
-header .dl{width:8%; float:left; height:80px; padding-top:8px; text-align:center; float:right}
-.dl button{border-radius:50%; width:51px; height:51px}
-.dl p{font-size:14px; color:#FFF}
+
 section{background-color:#f2f2f2; overflow:hidden; padding-bottom:50px}
 .left{width:300px; height:441px; background-color:#FFF; border:1px solid #cccccc; float:left; margin-top:75px; margin-left:50px}
 .right{width:826px; height:908px;background-color:#FFF; border:1px solid #cccccc; float:left;margin-top:75px; margin-left:40px}
@@ -38,11 +21,11 @@ section{background-color:#f2f2f2; overflow:hidden; padding-bottom:50px}
 .comment-box .comment-content .comment-time { color:#000; margin-top: 3px; line-height: 16px; position: relative;}
  .comment-box .comment-content .comment-operate { display: block; color: #369; height: 20px;  position: absolute; bottom: 0px; right: 10px;}
  
- .text-box{overflow:hidden; display:none; margin-left:20px}
+ .text-box{overflow:hidden; margin-left:20px}
  .text-box .comment { border: 1px solid #eee; display: block; height: 15px; width: 428px; padding: 5px; resize: none; color: #ccc}
-.text-box .btn {font-size: 12px; font-weight: bold; display: none; float: right; width: 65px; height: 25px; border: 1px solid #0C528D; color: #fff; background: #4679AC; margin-right:390px; margin-top:10px}
+.text-box .btn {font-size: 12px; font-weight: bold;  float: right; width: 65px; height: 25px; border: 1px solid #0C528D; color: #fff; background: #4679AC; margin-right:390px; margin-top:10px}
 .text-box .btn-off { border: 1px solid #ccc; color: #ccc; background: #F7F7F7;}
-.text-box .word{ display: none; float: right; margin: 14px 10px 0 0; color: #666;}
+.text-box .word{  float: right; margin: 14px 10px 0 0; color: #666;}
 .text-box-on .comment{ height: 50px; color: #333;}
 .text-box-on .btn{ display: inline;}
  .text-box-on .word{ display: inline;}
