--- a/src/main/webapp/static/front/css/m_picturedetail.css
+++ b/src/main/webapp/static/front/css/m_picturedetail.css
@@ -1,5 +1,6 @@
 /* CSS Document */
 *{padding:0; margin:0}
+#localImag img{width:320px; height:300px}
 header{background-color:#363f48; width:100%; height:87px; overflow:hidden}
 a{ text-decoration:none; display:inline-block;}
 ul{list-style:none}
