--- a/src/main/webapp/static/front/css/main2.css
+++ b/src/main/webapp/static/front/css/main2.css
@@ -13,7 +13,7 @@ header{background-color:#363f48; width:100%; height:140px; overflow:hidden}
 .dl p{font-size:14px; color:#FFF}
 ul{list-style:none}
 a{ text-decoration:none; display:inline-block;}
-nav{ width:100%;margin-top:45px;}
+nav{ width:100%;margin-top:0px;}
 nav ul{ margin-left:100px; width:91%}
 nav ul li{display:inline-block; width:8%;  text-align:center}
 nav ul li a{color:#6c7279;font-size:20px; width:100%; padding:8px 0}
@@ -113,7 +113,7 @@ form{line-height:75px; width:100%}
 .rb .p{width:25%; float:left; margin-right:60px; margin-bottom:20px}
 .rb .p a{width:100%}
 .rb .p img{width:100%}
-.tuijian{width: 60%;margin-left:5%;min-height:475px;background-color: #00a0e9;float: left}
+.tuijian{width: 60%;margin-left:5%;min-height:475px;float: left}
 .second{padding-top:30px; width:30%; padding-bottom:20px;float: left;padding-left: 80px;}
 .second .title{font-size:20px; font-weight:800; color:#acafb3}
 .second ul{;margin-top:40px}
@@ -121,6 +121,13 @@ form{line-height:75px; width:100%}
 .second ul li a{width:100%}
 .second ul li a p{margin-top:10px; color:#5c5c5c}
 .second ul li a img{width:100%}
+
+.tuijian ul li a{margin-bottom: 10px;color:#8b9095; width: 100%}
+.tuijian ul li a .t{margin-left: 50%}
+.tuijian ul .zr{font-weight:800; color:#82878d; font-size:20px;}
+.tuijian ul .zr .m{font-size:14px; color:#47b8e4; letter-spacing:1px;}
+
+
 .third{width:100%;overflow:hidden}
 .third .left{width:50%; padding-top:20px; padding-bottom:20px; float:left}
 .third .inner{margin-left:3%}
