--- a/src/main/webapp/static/front/css/collect.css
+++ b/src/main/webapp/static/front/css/collect.css
@@ -1,15 +1,15 @@
 footer{width:100%; height:91px; background-color:#363f48; text-align:center; color:#FFF; padding-top:50px}
 footer p{font-size:13px}
 section{background-color:#eceaee; width:100%; min-height:500px; overflow:hidden}
-.left{width:860px;float:left; margin-top:70px; margin-left:85px}
-.right{background-color:#FFF; width:240px; float:right; border:1px solid #cccccc; margin-top:70px; margin-right:65px; border-radius:4px}
+.left{width:60%;float:left; margin-top:70px; margin-left:85px;}
+.right{background-color:#FFF; width:300px; float:right; border:1px solid #cccccc; margin-top:100px; margin-right:65px; border-radius:4px}
 .left .top{height:30px; border-bottom:1px solid #999999}
 .left .top .n{font-size:16px; border-bottom:2px solid #258ec2; width:65px; height:22px; margin-left:10px; padding-bottom:8px; color:#333333}
 .left .top span{position:relative; top:5px}
 .left ul{ width:100%; padding-bottom:35px; list-style:none}
-.left ul li{width:100%; height:111px; border:1px solid #cccccc; background-color:#FFF; margin-top:35px;}
-.left ul li img{float:left; width:100px; height:77px; margin-left:15px; margin-top:16px}
-.left ul li .center{float:left; margin-left:20px}
+.left ul li{width:100%; height:auto; border:1px solid #cccccc; background-color:#FFF; margin-top:35px; padding-bottom:20px;overflow: hidden}
+.left ul li img{float:left; width:12%; height:120px; margin-left:15px; margin-top:35px}
+.left ul li .center{float:left; margin-left:20px; width: 55%}
 .left ul li .center .t{font-size:18px; letter-spacing:1px; margin-top:30px}
 .left ul li .center .c{font-size:14px; color:#a1a1a1;  margin-top:15px}
 .left ul li .r{float:left; margin-left:40px}
