--- a/src/main/webapp/static/front/css/others_main.css
+++ b/src/main/webapp/static/front/css/others_main.css
@@ -1,8 +1,8 @@
 
-#search{background-image:url(../img/bg.jpg); width:100%; height:50px; }
-.below{height:50px; padding-left:430px;}
+#search{background-image:url(../img/bg.jpg); width:100%; height:50px; text-align: center}
+.below{height:50px;}
 .below button{height:31px; border-radius:4px; border:none; margin-left:10px; margin-top:10px;background-color:#5e5e5e}
-.below button a{padding:0 10px; font-size:5px; line-height:31px; color:#FFF}
+.below button a{padding:0 10px; font-size:14px; line-height:31px; color:#FFF}
 .below button a:hover{background-color:#333333}
 section{background-color:#e4e4e4; width:100%; overflow:hidden; padding-bottom:20px}
 .left{width:73%; float:left;}
