--- a/src/main/webapp/static/front/css/m_articledetail.css
+++ b/src/main/webapp/static/front/css/m_articledetail.css
@@ -40,7 +40,7 @@ section .inner p{font-size:16px}
 .text-box-on .btn{ display: inline;}
 .text-box-on .word{ display: inline;}
 
-.right{float:left; width:265px; height:337px; border:1px solid #cccccc; margin-top: 10px;margin-left: 30px; background-color:#FFF}
+.right{float:left; width:265px; min-height:337px; border:1px solid #cccccc; margin-top: 10px;margin-left: 30px; background-color:#FFF}
 .right .top{border-bottom:1px solid #cccccc; height:65px; width:190px; margin:0 auto}
 .right .top .n{font-size:14px; color:#333333}
 .right .top span{position:relative; top:30px}
