--- a/src/main/webapp/static/front/css/m_picturedetail.css
+++ b/src/main/webapp/static/front/css/m_picturedetail.css
@@ -18,9 +18,9 @@ header .dl{width:8%; float:left; height:80px; padding-top:8px; text-align:center
 .dl button{border-radius:50%; width:51px; height:51px}
 .dl p{font-size:14px; color:#FFF}
 #search{background-image:url(../img/bg.jpg); width:100%; height:50px; }
-.below{height:50px; padding-left:430px;}
+.below{height:50px; text-align: center}
 .below button{height:31px; border-radius:4px; border:none; margin-left:10px; margin-top:10px;background-color:#5e5e5e}
-.below button a{padding:0 10px; font-size:5px; line-height:31px; color:#FFF}
+.below button a{padding:0 10px; font-size:13px; line-height:31px; color:#FFF}
 .below button a:hover{background-color:#333333}
 section{background-color:#f2f2f2; min-height:570px; position:relative}
 .inner{width:90%; margin:0 auto; overflow:hidden; padding-bottom:10px}
